--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 
 // back-web-img
 .back-web-img {
-    background-image: url(./img/back-web_page.jpg);background-repeat: no-repeat;
+    background-image: url(../img/back-web_page.jpg);background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: 0;
     
