--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 // header_area
 #header_area {
     .img_back {
-        background-image: url(./img/top-backgroungsmm.jpg);
+        background-image: url(../img/background-for-top-banner.png);
         background-repeat: no-repeat;
         width: 100%;
         position: relative;
